--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Snake</title>
   </head>
   <body>
-    <button id="start-game">Start</button>
-    <div id="app">
-      <canvas width="500px" height="500px" id="canvas"></canvas>
+    <div id="app" class="app">
+      <button id="start_game" class="start-game-button">Start game</button>
+      <canvas id="canvas"></canvas>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
